Fixed buttons bugs

--- a/Horizon.html
+++ b/Horizon.html
@@ -20,6 +20,7 @@
     <!--Main style-->
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
+
   <body>
     <div class="body">
       <!-- This is the nav bar-->
@@ -44,7 +45,6 @@
       <main>
 
         <!--main page-->
-
         <section class="page">
           <div class="details">
             <h1>Horizon</h1>
@@ -55,6 +55,7 @@
                for a while as many find it "too hard" "too fast". You think you got what it
                 takes to beat the game ? </p>
           </div>
+
           <div class="hero">
             <a href="cube-it.html">
               <img
@@ -69,7 +70,9 @@
               />
             </a>
           </div>
+          
         </section>
+        
         <!--Second page-->
         <section class="page">
           <div class="details">
@@ -81,7 +84,7 @@
              make sure to give us feedback there.
             </p>
           </div>
-          <div class="details">
+          <div class="hero">
             <div class="button" id="download">
               <a href="https://epic-prestige.itch.io/cubeit" target="_blank">download</a>
                </a>
