--- a/Move-it.html
+++ b/Move-it.html
@@ -62,6 +62,13 @@
               />
             </a>
           </div>
+          <!--Downlaod button-->
+          <div class="hero">
+            <div class="button" id="download">
+              <a href="./Move.It.apk" download="Move.It.apk">download apk</a>
+              </a>
+            </div> 
+        </div>
         </section>
 
         <!--Second page-->
@@ -75,16 +82,13 @@
              make sure to give us feedback there.
             </p>
           </div>
+          <!--Link button to itch io-->
           <div class="hero">
             <div>
-            <div class="button" id="download">
-              <a href="https://epic-prestige.itch.io/2d-game-alpha-01" target="_blank">Go to itch.io</a>
-              </a>
-              </div> 
               <div class="button" id="download">
-                <a href="./Move.It.apk" download="Move.It.apk">download apk</a>
+                <a href="https://epic-prestige.itch.io/2d-game-alpha-01" target="_blank">Go to itch.io</a>
                 </a>
-              </div> 
+                </div> 
             </div>
         </div> 
         </section>
