--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="Icon" href="assets/img/Night shield Logo.png" />
+    <link rel="Icon" href="assets/img/logos/Night shield Logo.png"/>
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:100,300,500&display=swap"
       rel="stylesheet"
@@ -16,7 +16,7 @@
       rel="icon"
       type="x/icon"
       sizes="1500x1500"
-      href="assets/img/Night shield Logo.png"
+      href="assets/img/logos/Night shield Logo.png"
     />
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
