--- a/index.html
+++ b/index.html
@@ -1,80 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="Icon" href="assets/img/Night shield Logo.png" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Poppins:100,300,500&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="" href="./assets/js/app.js">
-    <title>Welcome</title>
-    <link
-      rel="icon"
-      type="x/icon"
-      sizes="1500x1500"
-      href="assets/img/Night shield Logo.png"
-    />
-    <!--Main style-->
-    <link rel="stylesheet" href="assets/css/style.css" />
-  </head>
-  <body>
-    <div class="body">
-      <!-- This is the nav bar-->
-      <header>
-        <div class="topnav" id="myTopnav">
-          <a href="./index.html" class="active">Night Shield Studio</a>
-          <a href="./Horizon.html">Horizon</a>
-          <a href="./Move-it.html">Move.It</a>
-          <a href="./team.html">team</a>
-          <a href="./about.html">about</a>
-          <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-            <svg width="30" height="20" viewBox="0 0 43 23" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <line y1="1.5" x2="43" y2="1.5" stroke="white" stroke-width="3"/>
-              <line y1="11.5" x2="28" y2="11.5" stroke="white" stroke-width="3"/>
-              <line y1="21.5" x2="16" y2="21.5" stroke="white" stroke-width="3"/>
-              </svg>
-          </a>
-        </div>
-      </header>  
-      <!--Main content-->
-      <main>
-        <!--main page-->
-        <section class="page">
-          <div class="details">
-            <h1>Welcome</h1>
-            <h2>To the official Night shield Studio website</h2>
-            <p>Here you will find all the details of all of our products.</p>
-          </div>
-          <div class="hero">
-            <a href="cube-it.html">
-              <img
-                class="mainImg-left"
-                src="assets/img/cube-it-left.png"
-                alt="Cube.It left"
-              />
-              <img
-                class="mainImg-right"
-                src="assets/img/cube-it-right.png"
-                alt="Cube.It right"
-              />
-            </a>
-          </div>
-        </section>
-      </main>
-    </div>
-    <!-- this is the JavaScript-->
-    <script>
-    function myFunction() {
-      var x = document.getElementById("myTopnav");
-      if (x.className === "topnav") {
-        x.className += " responsive";
-      } else {
-        x.className = "topnav";
-      }
-    }
-    </script>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+		<link rel="Icon" href="assets/img/Night shield Logo.png" />
+		<link
+			href="https://fonts.googleapis.com/css?family=Poppins:100,300,500&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="" href="./assets/js/app.js" />
+		<title>Welcome</title>
+		<link
+			rel="icon"
+			type="x/icon"
+			sizes="1500x1500"
+			href="assets/img//logos/Night shield Logo.png"
+		/>
+		<!--Main style-->
+		<link rel="stylesheet" href="assets/css/style.css" />
+	</head>
+	<body>
+		<div class="body">
+			<!-- This is the nav bar-->
+			<header>
+				<div class="topnav" id="myTopnav">
+					<a href="./index.html" class="active">Night Shield Studio</a>
+					<a href="./Horizon.html">Horizon</a>
+					<a href="./Move-it.html">Move.It</a>
+					<a href="./team.html">team</a>
+					<a href="./about.html">about</a>
+					<a href="javascript:void(0);" class="icon" onclick="myFunction()">
+						<svg
+							width="30"
+							height="20"
+							viewBox="0 0 43 23"
+							fill="none"
+							xmlns="http://www.w3.org/2000/svg"
+						>
+							<line y1="1.5" x2="43" y2="1.5" stroke="white" stroke-width="3" />
+							<line
+								y1="11.5"
+								x2="28"
+								y2="11.5"
+								stroke="white"
+								stroke-width="3"
+							/>
+							<line
+								y1="21.5"
+								x2="16"
+								y2="21.5"
+								stroke="white"
+								stroke-width="3"
+							/>
+						</svg>
+					</a>
+				</div>
+			</header>
+			<!--Main content-->
+			<main>
+				<!--main page-->
+				<section class="page">
+					<div class="details">
+						<h1>Welcome</h1>
+						<h2>To the official Night shield Studio website</h2>
+						<p>Here you will find all the details of all of our products.</p>
+					</div>
+					<div class="image-container">
+						<a href="cube-it.html">
+							<img src="assets/img/logos/Night shield Logo.png" />
+						</a>
+					</div>
+				</section>
+			</main>
+		</div>
+		<!-- this is the JavaScript-->
+		<script>
+			function myFunction() {
+				var x = document.getElementById('myTopnav');
+				if (x.className === 'topnav') {
+					x.className += ' responsive';
+				} else {
+					x.className = 'topnav';
+				}
+			}
+		</script>
+	</body>
 </html>
