--- a/index.html
+++ b/index.html
@@ -26,34 +26,6 @@
 			<header>
 				<div class="topnav" id="myTopnav">
 					<a href="./index.html" class="active">Night Shield Studio</a>
-					<a href="./Horizon.html">Horizon</a>
-					<a href="./Move-it.html">Move.It</a>
-					<a href="./team.html">team</a>
-					<a href="./about.html">about</a>
-					<a href="javascript:void(0);" class="icon" onclick="myFunction()">
-						<svg
-							width="30"
-							height="20"
-							viewBox="0 0 43 23"
-							fill="none"
-							xmlns="http://www.w3.org/2000/svg"
-						>
-							<line y1="1.5" x2="43" y2="1.5" stroke="white" stroke-width="3" />
-							<line
-								y1="11.5"
-								x2="28"
-								y2="11.5"
-								stroke="white"
-								stroke-width="3"
-							/>
-							<line
-								y1="21.5"
-								x2="16"
-								y2="21.5"
-								stroke="white"
-								stroke-width="3"
-							/>
-						</svg>
 					</a>
 				</div>
 			</header>
@@ -67,23 +39,12 @@
 						<p>Here you will find all the details of all of our products.</p>
 					</div>
 					<div class="image-container">
-						<a href="cube-it.html">
-							<img src="assets/img/logos/Night shield Logo.png" />
+						<a href="">
+							<img src="" />
 						</a>
 					</div>
 				</section>
 			</main>
 		</div>
-		<!-- this is the JavaScript-->
-		<script>
-			function myFunction() {
-				var x = document.getElementById('myTopnav');
-				if (x.className === 'topnav') {
-					x.className += ' responsive';
-				} else {
-					x.className = 'topnav';
-				}
-			}
-		</script>
 	</body>
 </html>
