--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
 		<link rel="Icon" href="assets/img/Night shield Logo.png" />
-		<link
-			href="https://fonts.googleapis.com/css?family=Poppins:100,300,500&display=swap"
-			rel="stylesheet"
-		/>
-		<link rel="" href="./assets/js/app.js" />
 		<title>Welcome</title>
 		<link
 			rel="icon"
@@ -17,34 +13,37 @@
 			sizes="1500x1500"
 			href="assets/img//logos/Night shield Logo.png"
 		/>
+
 		<!--Main style-->
 		<link rel="stylesheet" href="assets/css/style.css" />
 	</head>
 	<body>
-		<div class="body">
-			<!-- This is the nav bar-->
-			<header>
-				<div class="topnav" id="myTopnav">
-					<a href="./index.html" class="active">Night Shield Studio</a>
-					</a>
-				</div>
-			</header>
-			<!--Main content-->
-			<main>
-				<!--main page-->
-				<section class="page">
-					<div class="details">
-						<h1>Welcome</h1>
-						<h2>To the official Night shield Studio website</h2>
-						<p>Here you will find all the details of all of our products.</p>
-					</div>
-					<div class="image-container">
-						<a href="">
-							<img src="" />
-						</a>
-					</div>
-				</section>
-			</main>
-		</div>
+<div class="grid-container">
+  	<div class="header">
+    	<h1>Night Shield Entertainment</h1>
+		<h2>Welcome to the official night shield Entertainment website</h2>
+  	</div>
+  
+  		<div class="left" >
+			<p>Here you will find all of the latest updates in my products</p>
+			<img src="/assets/img/Horizon/Horizen_1.png" alt="">
+		  </div>
+
+  		<div class="middle">
+			<p>Column middle</p>
+			<img src="/assets/img/Horizon/Horizen_1.png" alt="">
+		  </div>  
+
+  		<div class="right">
+			<p>Column Right</p>
+			<img src="/assets/img/Horizon/Horizen_1.png" alt="">
+		  </div>
+  
+	<div class="footer">
+	<p>© Night Shield Entertainment</p>
+	</div>
+
+</div>
+
 	</body>
 </html>
