--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <meta name="description" content="" />
 <link href="http://fonts.googleapis.com/css?family=Futura" rel="stylesheet" />
 <link href="assets/css/style.css" rel="stylesheet" type="text/css" media="all" />
+<link rel = "icon" href = "/assets/img/logos/Night shield Logo.png" type = "image/x-icon">
 
 </head>
 
@@ -81,7 +82,7 @@
     -->
 </div>
 <div id="copyright" class="container">
-	<p>&copy; Untitled. All rights reserved. </p>
+	<p>&copy; Night Shield. All rights reserved. </p>
 </div>
 </body>
 </html>
