--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title></title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
-<link href="http://fonts.googleapis.com/css?family=Futura" rel="stylesheet" />
+<link href="http://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
 <link href="assets/css/style.css" rel="stylesheet" type="text/css" media="all" />
 <link rel = "icon" href = "/assets/img/logos/Night shield Logo.png" type = "image/x-icon">
 
@@ -42,7 +42,8 @@
 
   <div id="featured">
 		<div class="container">
-        <img src="assets/img/Horizon/Horizen_1.png" alt="" width="852" height="480" />
+        <img src="assets/img/Horizon/Horizen_1.png" alt="Gameplay" width="852" height="480" />
+        <img src="assets/img/Horizon/Horizen_2.png" alt="Menu" width="852" height="480" />
 			<div class="title">
 				<h2>Currently in progress</h2>
 				<span class="byline">Horizon</span> </div>
