--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 <title></title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
-<link href="http://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
 <link href="assets/css/style.css" rel="stylesheet" type="text/css" media="all" />
-<link rel = "icon" href = "/assets/img/logos/Night shield Logo.png" type = "image/x-icon">
+<link rel = "icon" href = "/assets/img/logos/CompanyLogo.png" type = "image/x-icon">
 
 </head>
 
