--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta name="keywords" content="" />
 	<meta name="description" content="" />
 	<link href="assets/css/style.css" rel="stylesheet" type="text/css" media="all" />
-	<link rel="icon" href="/assets/img/logos/Antony_Melendez.svg" type="image/x-icon">
+	<link rel="icon" href="/assets/img/logos/Antony_Melendez.svg" type="image/svg">
 
 </head>
 
