--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta name="keywords" content="" />
 	<meta name="description" content="" />
 	<link href="assets/css/style.css" rel="stylesheet" type="text/css" media="all" />
-	<link rel="icon" href="/assets/img/logos/Antony_Melendez.svg" type="image/svg">
+	<link rel="icon" href="/assets/img/logos/Antony_Melendez.ico" type="image/x-icon">
 
 </head>
 
@@ -13,7 +13,7 @@
 		<div id="header-wrapper">
 			<div id="header" class="container">
 				<div id="logo">
-					<h1><a href="#">Night Shield</a></h1>
+					<h1><a href="#">Antony Melendez</a></h1>
 				</div>
 			</div>
 		</div>
@@ -21,8 +21,8 @@
 		<div id="banner">
 			<div class="container">
 				<div class="title">
-					<h2>Welcome</h2>
-					<span class="byline">Night shield</span>
+					<h2>Welcome to</h2>
+					<span class="byline">Antonys' portfolio</span>
 				</div>
 			</div>
 		</div>
