--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title></title>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+	<title>Antony Melendez portfolio</title>
 	<meta name="keywords" content="" />
 	<meta name="description" content="" />
 	<link href="assets/css/style.css" rel="stylesheet" type="text/css" media="all" />
