--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap"
+		rel="stylesheet">
 	<title>Antony Melendez portfolio</title>
 	<meta name="keywords" content="" />
 	<meta name="description" content="" />
@@ -12,6 +13,8 @@
 </head>
 
 <body>
+
+	<!-- #region navbar-->
 	<div id="wrapper">
 		<div id="header-wrapper">
 			<div id="header" class="container">
@@ -21,29 +24,40 @@
 			</div>
 		</div>
 
+		<!-- #endregion -->
+
+		<!-- #region welcome page  -->
 		<div id="banner">
 			<div class="container">
 				<div class="title">
 					<h2>Welcome to</h2>
-					<span class="byline">Antonys' portfolio</span>
+					<span class="byline">Antony's portfolio</span>
 				</div>
+				<p>Here are my current project that I am working on, I plan on documenting and giving regular updates on
+					this site to show all my work.</p>
 			</div>
 		</div>
 
+		<!-- #endregion -->
 
+		<!-- #region game store page-->
 		<div id="page" class="container">
 
 			<div class="title">
 				<h2>ITCH.IO</h2>
 				<span class="byline">Game Store</span>
+				<p>Here you can download and find my all previous and current games! please support me there.</p>
 			</div>
-			<p> Here you can download and find my all previous and current games! please support me there.</p>
+
 			<ul class="actions">
 				<li><a href="https://night-shield.itch.io/horizon" class="button">GO</a></li>
 			</ul>
 
 		</div>
 
+		<!-- #endregion -->
+
+		<!-- #region media page-->
 		<div id="featured">
 			<div class="container">
 
@@ -57,20 +71,45 @@
 				<div class="title">
 					<h2>Currently in progress</h2>
 					<span class="byline">Horizon</span>
+					<p>This game is a performer style game with multiple levels to get around, it is currently being
+						migrated from Unity to the Unreal Engine.</p>
 				</div>
 
-				<span>This game is a plaformer sytyle game with multiple levels to get around, it is currently being
-					migrated from Unity to the Unreal Engine.</span>
 			</div>
 			<ul class="actions">
-				<li><a href="https://night-shield.itch.io/horizon" class="button">Download</a></li>
+				<a href="https://night-shield.itch.io/horizon" class="button">Download</a>
 			</ul>
 		</div>
 
+		<!-- #endregion -->
+
+		<!-- #region socials page-->
+		<div id="page" class="container">
+
+			<div class="title">
+				<h2>Socials</h2>
+				<span class="byline">My social medias</span>
+				<p>If you ever need to see my content or contact me.</p>
+			</div>
+
+			<ul class="actions">
+				<a href="https://www.instagram.com/_xycy_/" class="button">Instagram</a>
+				<a href="https://twitter.com/_xycy_" class="button">Twitter</a>
+				<a href="https://www.tiktok.com/@__xycy__" class="button">TikTok</a>
+			</ul>
+
+		</div>
+
+		<!-- #endregion -->
+
+		<!-- #region copyright-->
 	</div>
 	<div id="copyright" class="container">
-		<p>&copy; Night Shield. All rights reserved. </p>
+		<p>&copy; Antony Melendez. All rights reserved. </p>
 	</div>
+	</div>
+
+	<!-- #endregion -->
 </body>
 
 </html>
